--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "kivoai-platform",
+	"name": "fastapi-worker",
 	"main": "src/worker.py",
 	"compatibility_date": "2025-11-02",
 	"compatibility_flags": [
